--- a/index.html
+++ b/index.html
@@ -100,54 +100,7 @@
             <div class="bt_index clearfix mb10"><h2 class="fl"><i class="icon iconfont txt-red">&#xe601;</i>最新</h2><a href="more.html" class="more ease-1">更多<i class="iconfont ease-3">&#xe617;</i></a></div>
             <div class="list_download_con">
                 <ul class="clearfix">
-                    <li>
-                        <div class="item ease-3 clearfix">
-                            <a href="trial_details.html">
-                                <div class="pic"><img src="images/pic_01.jpg" alt="北京北方华光十五成立周年暨二零一四年年会庆典"></div>
-                                <div class="txt">
-                                    <div class="title">泰坦尼克</div>
-                                    <p class="des txt-666 mb10">详情详情详情详情详情详情详情详情详情详情详情详情详情。</p>
-                                    <p class="date txt-999">2019/06/13  15:30</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="item ease-3 clearfix">
-                            <a href="trial_details.html">
-                                <div class="pic"><img src="images/pic_01.jpg" alt="北京北方华光十五成立周年暨二零一四年年会庆典"></div>
-                                <div class="txt">
-                                    <div class="title">泰坦尼克</div>
-                                    <p class="des txt-666 mb10">详情详情详情详情详情详情详情详情详情详情详情详情详情。</p>
-                                    <p class="date txt-999">2019/06/13  15:30</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="item ease-3 clearfix">
-                            <a href="trial_details.html">
-                                <div class="pic"><img src="images/pic_01.jpg" alt="北京北方华光十五成立周年暨二零一四年年会庆典"></div>
-                                <div class="txt">
-                                    <div class="title">泰坦尼克</div>
-                                    <p class="des txt-666 mb10">详情详情详情详情详情详情详情详情详情详情详情详情详情。</p>
-                                    <p class="date txt-999">2019/06/13  15:30</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="item ease-3 clearfix">
-                            <a href="trial_details.html">
-                                <div class="pic"><img src="images/pic_01.jpg" alt="北京北方华光十五成立周年暨二零一四年年会庆典"></div>
-                                <div class="txt">
-                                    <div class="title">泰坦尼克</div>
-                                    <p class="des txt-666 mb10">详情详情详情详情详情详情详情详情详情详情详情详情详情。</p>
-                                    <p class="date txt-999">2019/06/13  15:30</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
+
                 </ul>
             </div>
         </div>
@@ -180,108 +133,11 @@
             </div>
             <div class="filter_list">
                 <ul>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="trial_details.html" class="item ease-1">
-                            <div class="pic fl ease-1"><img src="images/filter_01.jpg" alt="新闻标题"></div>
-                            <div class="txt">
-                                <h1 class="title fs20 text-overflow">泰坦尼克</h1>
-                                <div class="date txt-666">2015-05-04<p class="tag inlineblock ml10"><span><em>RPG</em></span><span><em>射击</em></span></p></div>
-                                <p class="desc fs14 txt-666 mb10">游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情游戏详情。</p>
-                                <div class="focus">
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                    <span><i class="icon iconfont mr5"></i><em>99999</em></span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
+
                 </ul>
             </div>
             <div class="pagelist">
-                <p><a href="###">上一页</a><a class="thisclass" href="###">1</a><a href="###">2</a><a href="###">3</a><a href="###">4</a><a href="###">5</a><a href="###">6</a><a href="###">7</a><a href="###">8</a><a href="###">下一页</a></p>
+                <p><a href="###">上一页</a><span class="pageNum"><a class="thisclass" href="###">1</a></span><a href="###">下一页</a></p>
             </div>
         </div>
     </div>
