个人资料编辑

--- a/found_friend_edit.html
+++ b/found_friend_edit.html
@@ -32,12 +32,11 @@
         <div class="fl">
             <div class="navbox">
                 <ul class="clearfix nav_shu">
-                    <li class="nLi"><h3><a class="ease-1" href="javascript:;"><span>探索游戏</span></a></h3>
+                    <li class="nLi"><h3><a class="ease-1" href="index.html"><span>探索游戏</span></a></h3>
                     </li>
-                    <li class="nLi on"><h3><a class="ease-1" href="javascript:;"><span>发现朋友</span></a></h3>
+                    <li class="nLi"><h3><a class="ease-1" href="found_friend.html"><span>发现朋友</span></a></h3>
                     </li>
                     <li class="nLi"><h3><a class="ease-1" href="javascript:;"><span>客服</span></a></h3>
-                    </li>
                     </li>
                 </ul>
             </div>
@@ -64,8 +63,8 @@
     <div class="section">
         <div class="nr w1200 mar0">
             <div id="teamdesc">
-                <p class="mb20">团队名称成：<span class="txt-blue">我的团队</span></p>
-                <p>团队成员</p>
+                <p class="mb20">团队名称成：<input type="text" value="我的团队"/></p>
+                <p class="clearfix"><span>团队成员</span> <span class="btn btn_small btn_blue inlineblock radius-5 mr5 fr " style="cursor: pointer">&nbsp;发起邀请&nbsp;</span></p>
             </div>
             <div class="filter_list found_friend_list">
                 <ul>
