--- a/editor.html
+++ b/editor.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
     <script type="text/javascript" src="js/icheck.min.js"></script>
+    <script src="js/ajaxfileupload.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <style type="text/css">
         #head{ background: #fff; }
@@ -69,23 +70,23 @@
             <div class="item_from mb20 clearfix">
                 <p class="atr fl mr20 txt-333">头像:</p>
                 <div class="change_avatar fl">
-                    <div class="pic"><img id="imgHeadPhoto_1" src="images/avatar.jpg"><a href="###" class="ease-3 txt-blue">选择文件<input type="file" filenum="1"></a></div>
+                    <div class="pic"><img id="imgHeadPhoto_1" src="#" alt=""><a href="javascript:;" class="ease-3 txt-blue">选择文件<input type="file" filenum="1" name="file" id="file" onchange="uploadHeader()"></a></div>
                 </div>
             </div>
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20 txt-333">昵称:</label>
-                <p class="fl">666666<span class="txt-blue ml10">修改</span></p>
+                <p class="fl"><span id="user-name"></span><span class="txt-blue ml10">修改</span></p>
             </div>
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20 txt-333">性别:</label>
                 <div class="radio_box">
                     <ul class="clearfix">
                         <li>
-                            <input type="radio" name="sex" value="男" checked="checked" />
+                            <input type="radio" name="sex" value="1" class="user-sex" />
                             <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-blue"><i class="icon inlineblock man"></i><span>男</span></a>
                         </li>
                         <li>
-                            <input type="radio" name="sex" value="女" />
+                            <input type="radio" name="sex" value="2" class="user-sex" />
                             <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-pink"><i class="icon inlineblock female"></i><span>女</span></a>
                         </li>
                     </ul>
@@ -94,30 +95,103 @@
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20 txt-333">生日:</label>
                 <div class="fl">
-                    <select value="" class="selectbox radius-2" datatype="*">
-                        <option value="">年</option>
-                        <option value="8">2014</option>
-                        <option value="17">2013</option>
-                        <option value="607">2012</option>
-                        <option value="1">2011</option>
-                        <option value="608">2010</option>
-                        <option value="33">2009</option>
-                        <option value="609">2008</option>
-                        <option value="499">2007</option>
-                        <option value="24">2006</option>
-                        <option value="610">2005</option>
-                        <option value="611">2004</option>
-                        <option value="612">2003</option>
-                        <option value="613">2002</option>
-                        <option value="44">2001</option>
+                    <select value="" class="selectbox radius-2" datatype="*" id="birthday-year">
+                        <option value="2019">2019</option>
+                        <option value="2018">2018</option>
+                        <option value="2017">2017</option>
+                        <option value="2016">2016</option>
+                        <option value="2015">2015</option>
+                        <option value="2014">2014</option>
+                        <option value="2013">2013</option>
+                        <option value="2012">2012</option>
+                        <option value="2011">2011</option>
+                        <option value="2010">2010</option>
+                        <option value="2009">2009</option>
+                        <option value="2008">2008</option>
+                        <option value="2007">2007</option>
+                        <option value="2006">2006</option>
+                        <option value="2005">2005</option>
+                        <option value="2004">2004</option>
+                        <option value="2003">2003</option>
+                        <option value="2002">2002</option>
+                        <option value="2001">2001</option>
+                        <option value="1999">1999</option>
+                        <option value="1998">1998</option>
+                        <option value="1997">1997</option>
+                        <option value="1996">1996</option>
+                        <option value="1995">1995</option>
+                        <option value="1994">1994</option>
+                        <option value="1993">1993</option>
+                        <option value="1992">1992</option>
+                        <option value="1991">1991</option>
+                        <option value="1990">1990</option>
+                        <option value="1989">1989</option>
+                        <option value="1988">1988</option>
+                        <option value="1987">1987</option>
+                        <option value="1986">1986</option>
+                        <option value="1985">1985</option>
+                        <option value="1984">1984</option>
+                        <option value="1983">1983</option>
+                        <option value="1982">1982</option>
+                        <option value="1981">1981</option>
+                        <option value="1980">1980</option>
+                        <option value="1979">1979</option>
+                        <option value="1978">1978</option>
+                        <option value="1977">1977</option>
+                        <option value="1976">1976</option>
+                        <option value="1975">1975</option>
+                        <option value="1974">1974</option>
+                        <option value="1973">1973</option>
+                        <option value="1972">1972</option>
+                        <option value="1971">1971</option>
+                        <option value="1970">1970</option>
                     </select>
-                    <select class="selectbox ml10 radius-2" datatype="*">
-                        <option value="">月</option>
-                        <option value="44">1</option>
+                    <select class="selectbox ml10 radius-2" datatype="*" id="birthday-month">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
                     </select>
-                    <select class="selectbox ml10 radius-2" datatype="*">
-                        <option value="">日</option>
-                        <option value="44">1</option>
+                    <select class="selectbox ml10 radius-2" datatype="*" id="birthday-day">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
                     </select>
                 </div>
             </div>
@@ -144,23 +218,23 @@
             </div>
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20">QQ:</label>
-                <p class="fl"><input type="text" class="input_text radius-2" placeholder="" style="width:84px;" value=""></p>
+                <p class="fl"><input type="text" class="input_text radius-2" placeholder="" style="width:84px;" value="" id="user-qq"></p>
             </div>
         </div>
         <div class="item">
             <div class="bt_default"><h1 class="txt-blue">作为玩家</h1></div>
             <div class="item_from mb20 clearfix">
                 <p class="atr mb5 txt-333">玩的第一款游戏</p>
-                <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value=""></div>
+                <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value="" id="play-paragraph-one"></div>
             </div>
             <div class="item_from mb20 clearfix">
                 <p class="atr mb5 txt-333">最喜欢的游戏</p>
-                <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value=""></div>
+                <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value="" id="favorite-games"></div>
             </div>
             <div class="item_from mb20 clearfix">
                 <p class="atr mb5 txt-333">最喜欢的游戏类型</p>
                 <div class="">
-                    <select class="selectbox" datatype="*" style="width:170px;">
+                    <select class="selectbox" datatype="*" style="width:170px;" id="game-type">
                         <option value="1">类型</option>
                         <option value="1.01">RPG</option>
                         <option value="1.02">休闲</option>
@@ -177,120 +251,49 @@
             <div class="item_from mb20 clearfix">
                 <p class="atr mb5 txt-333">对自己的定位</p>
                 <div class="radio_box">
-                    <ul class="clearfix">
-                        <li>
-                            <input type="radio" name="hobby" value="策划" checked="checked" />
-                            <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-666"><i class="icon inlineblock man"></i><span>策划</span></a>
-                        </li>
-                        <li>
-                            <input type="radio" name="hobby" value="程序" />
-                            <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-666"><i class="icon inlineblock man"></i><span>程序</span></a>
-                        </li>
-                        <li>
-                            <input type="radio" name="hobby" value="美术" />
-                            <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-666"><i class="icon inlineblock man"></i><span>美术</span></a>
-                        </li>
-                        <li>
-                            <input type="radio" name="hobby" value="音乐" />
-                            <a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-666"><i class="icon inlineblock man"></i><span>音乐</span></a>
-                        </li>
+                    <ul class="clearfix" id="self-orientation">
+                        <!--<li>-->
+                            <!--<input type="radio" name="hobby" value="策划" checked="checked" />-->
+                            <!--<a href="javascript:void(0);" class="radio_item radius-5 ease-1 txt-666"><i class="icon inlineblock man"></i><span>策划</span></a>-->
+                        <!--</li>-->
                     </ul>
                 </div>
-            </div>
-            <div class="item_from mb20 clearfix">
-                <p class="atr mb5 txt-333">最喜欢的游戏</p>
-                <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value=""></div>
             </div>
             <div class="item_from mb20 clearfix">
                 <p class="atr mb5 txt-333">从事的时长（年）</p>
                 <div class=""><input type="text" class="input_text radius-2" placeholder="" style="width:150px;" value=""></div>
             </div>
+            <!--<div class="item_from mb20 clearfix">-->
+                <!--<p class="atr mb5 txt-333">成果展示</p>-->
+                <!--<div class=""><input type="text" class="input_text radius-2" placeholder="请输入游戏名称" style="width:150px;" value=""></div>-->
+            <!--</div>-->
+            <!--<div class="item_from mb20 clearfix">-->
+                <!--<p class="atr fl mr20"></p>-->
+                <!--<div class="change_avatar fl">-->
+                    <!--<div class="pic pic02"><img id="imgHeadPhoto_2" src="images/avatar.jpg"><a href="###" class="ease-3 txt-blue">选择文件<input type="file" filenum="2"></a></div>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="item_from mb20 clearfix">
-                <p class="atr mb5 txt-333">成果展示</p>
-                <div class=""><input type="text" class="input_text radius-2" placeholder="请输入游戏名称" style="width:150px;" value=""></div>
-            </div>
-            <div class="item_from mb20 clearfix">
-                <p class="atr fl mr20"></p>
-                <div class="change_avatar fl">
-                    <div class="pic pic02"><img id="imgHeadPhoto_2" src="images/avatar.jpg"><a href="###" class="ease-3 txt-blue">选择文件<input type="file" filenum="2"></a></div>
-                </div>
-            </div>
-            <div class="item_from mb20 clearfix">
-                <label class="cpt">
+                <label class="cpt" id="is-development">
                     <span class="txt-333">是否愿意/有时间开发独立游戏</span>
                     <input type="checkbox" class="icheck" />
                 </label>
             </div>
         </div>
     </div>
-    <button class="btn_submit btn_blue btn_small radius-5 ease-1" type="submit" style="width:110px;margin-top:25px;margin-left:50px;">保存</button>
+    <button class="btn_submit btn_blue btn_small radius-5 ease-1" type="submit" style="width:110px;margin-top:25px;margin-left:50px;" id="preservation">保存</button>
 </div>
 <script type="text/javascript" src="js/LocalResizeIMG.js"></script>
 <script type="text/javascript" src="js/patch/mobileBUGFix.mini.js"></script>
+<script src="./js/view/editor.js"></script>
 <script type="text/javascript">
-/*头像上传*/
-$('input:file').click(function(){
-    var num = $(this).attr('filenum');
-    var nextnum = parseInt(num) +1;
-    $(this).localResizeIMG({
-        width: 100,
-        quality:1,
-        success:function(result){
-            var img = new Image();
-            img.src = result.base64;
-            $('#imgHeadPhoto_'+num).attr('src',img.src);
-            console.log(result);
-        }
-    })
-})
-/*头像上传*/
-$('input:file').click(function(){
-    var num = $(this).attr('filenum');
-    var nextnum = parseInt(num) +2;
-    $(this).localResizeIMG({
-        width: 100,
-        quality:1,
-        success:function(result){
-            var img = new Image();
-            img.src = result.base64;
-            $('#imgHeadPhoto_'+num).attr('src',img.src);
-            console.log(result);
-        }
-    })
-})
 </script>
 
 <script type="text/javascript">
-/*单选js*/
-$(function(){
-    $('.radio_box input').each(function(){
-        if($(this).attr('checked')){
-            $(this).next().addClass('current');
-        }
-    })
-    $('.radio_box .radio_item').click(function(){
-        if($(this).hasClass('open')){
-            $('#'+$(this).attr('open1')).show();
-            $('#'+$(this).attr('open2')).show();
-        }else{
-            $('#'+$(this).attr('open1')).hide();
-            $('#'+$(this).attr('open2')).hide();
-        }
-        $(this).prev().trigger('click');
-        $(this).parent().parent().find('.radio_item').removeClass('current');
-        $(this).addClass('current');
-        return false;
-    });
-});
 
 </script>
 <script type="text/javascript">
     $(function(){
-        /*icheck js*/
-        $('input.icheck').iCheck({
-            checkboxClass: 'icheckbox_flat-red',
-            radioClass: 'iradio_flat-red'
-        });
     })
 </script>
 </body>
